[package]
name = "codex-mem9"
version = "0.1.2"
edition = "2024"
description = "Codex memory sync and watch service with redaction and Homebrew support"
license = "MIT"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
directories = "5.0"
indexmap = { version = "2.12", features = ["serde"] }
notify = "8.2"
once_cell = "1.21"
regex = "1.12"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
tokio = { version = "1.47", features = ["macros", "rt-multi-thread", "signal", "time", "fs"] }
toml = "0.8"
walkdir = "2.5"

[dev-dependencies]
httpmock = "0.7"
tempfile = "3.20"
